data/derived/comb/progs/unify/prog2470.ml.out
Characters 75-82:
  | _ -> List.hd xs + sumList List.tl;;
                              ^^^^^^^
Error: This expression has type 'a list -> 'a list
       but an expression was expected of type int list
